--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
     "method-override": "^3.0.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "morgan": "^1.10.0"
   }
 }
