--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^6.1.3",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
@@ -26,6 +27,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^7.1.2",
+    "redis": "^4.1.0",
     "sanitize-html": "^2.7.0"
   }
 }
