--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "connect-redis": "^6.1.3",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
